# Wilme_Familia_Microcontroladores_2025_C1

./: Maquina de estado.c  README.md  sdkconfig.old
GP_timer/: GP_Timer.c
Proyecto_final/: sdkconfig
Proyecto_final/main/: esp_rest_main.c
front/: index.html
main/: CMakeLists.txt  rest_server.c
